gitops/clusters/homelab/security/authentik/patch-deployments-servers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
  namespace: authentik
spec:
  template:
    spec:
      containers:
        - name: server
