gitops/clusters/homelab/security/authentik/patch-deployments-workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: authentik
spec:
  template:
    spec:
      containers:
        - name: worker
