gitops/clusters/homelab/security/authentik/ldap-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: authentik-ldap
  namespace: authentik
spec:
  entryPoints:
    - ldaps
  routes:
    - match: HostSNI(`ldap.local.nasbenito.com`)
      services:
        - name: ak-outpost-outpost-ldap-truenas
          port: 389
  tls:
    secretName: authentik-ldap-tls
